<resources>
    <string name="app_name">Screen Sharing</string>
    <string name="action_settings">Settings</string>
    <string name="button_server">Share your screen</string>
    <string name="button_client">See another\'s screen</string>
    <string name="button_share">Share!</string>
    <string name="button_settings">Settings</string>
    <string name="button_help">Help</string>
    <string name="enter_id">Enter ID:</string>
    <string name="connect">Connect!</string>
    <string name="disconnect">Disconnect</string>
</resources>
